# Process this file with autoconf to produce a configure script.
AC_PREREQ(2.61a)
AC_INIT(Doxyfile)
AM_INIT_AUTOMAKE(uriparser, 0.6.0-doc)


## Doxygen
AC_CHECK_PROG(DOXY_CHECK, doxygen, found, missing)
if test ${DOXY_CHECK} != "found" ; then
	AC_MSG_ERROR([Please install Doxygen first.])
fi


## Graphviz
AC_CHECK_PROG(GRAPHVIZ_CHECK, dot, found, missing)
if test ${GRAPHVIZ_CHECK} != "found" ; then
	AC_MSG_ERROR([Please install Graphviz first.])
fi


AC_OUTPUT(Makefile)

